--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Thu Apr 04 23:43:25 IST 2019
-sdk.dir=C\:\\Users\\gaurang\\AppData\\Local\\Android\\Sdk
+sdk.dir=C\:\\Users\\DELL\\AppData\\Local\\Android\\Sdk
