--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,13 +7,13 @@
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.WAKE_LOCK"/>
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.VIBRATE"/>
-    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
     <application
         android:allowBackup="true"
@@ -22,6 +22,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".MainActivity_videocall"></activity>
         <activity android:name=".MainActivity" />
         <activity android:name=".splash">
             <intent-filter>
@@ -33,28 +34,26 @@
         <activity android:name=".Tutorial" />
         <activity android:name=".Alarm" />
         <activity android:name=".Notepad" />
-        <activity android:name=".NoteWindow"/>
+        <activity android:name=".NoteWindow" />
         <activity android:name=".Summary" />
-        <activity android:name=".Notes"/>
-        <activity android:name=".Settings"/>
+        <activity android:name=".Notes" />
+        <activity android:name=".Settings" /> <!-- <receiver android:name=".Alarm_Receiver"></receiver -->
+        <receiver
+            android:name=".Alarm_Receiver"
+            android:process=":remote" />
 
+        <service
+            android:name=".RingtonePlayingService"
+            android:enabled="true" />
 
-       <!-- <receiver android:name=".Alarm_Receiver"></receiver-->
-        <receiver android:name=".Alarm_Receiver" android:process=":remote" />
-
-
-        <service android:name="RingtonePlayingService"
-            android:enabled="true"></service>
-        <receiver android:name="BootReceiver"
+        <receiver
+            android:name=".BootReceiver"
             android:enabled="true"
-            android:exported="false"
-            >
+            android:exported="false">
             <intent-filter>
-                <action android:name="android.intent.action.BOOT_COMPLETED"/>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
         </receiver>
     </application>
-
-
 
 </manifest>
