--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,10 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+        maven { url 'https://maven.google.com' }
+        maven { url 'https://tokbox.bintray.com/maven' }
+
+
     }
 }
 
