--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,10 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 27
+    aaptOptions {
+        noCompress "tflite"
+        noCompress "lite"
+    }
     defaultConfig {
         applicationId "com.example.android.my_app"
         minSdkVersion 24
@@ -30,9 +34,15 @@ dependencies {
     implementation files('libs/YouTubeAndroidPlayerApi-1.2.2.zip')
     implementation 'com.google.firebase:firebase-core:16.0.8'
     implementation 'com.google.firebase:firebase-auth:16.2.0'
+    implementation 'com.google.firebase:firebase-database:16.1.0'
 
     implementation 'com.google.android.gms:play-services-auth:16.0.1'
     implementation 'com.android.support:support-vector-drawable:27.1.1'
     implementation 'com.android.support:recyclerview-v7:27.1.1'
     implementation 'com.google.android.gms:play-services-auth:16.0.1'
+    implementation 'org.tensorflow:tensorflow-lite:+'
+    implementation 'com.google.firebase:firebase-core:16.0.2'
+    implementation 'com.google.firebase:firebase-auth:16.2.1'
 }
+
+apply plugin: 'com.google.gms.google-services'
