--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.android.support:design:27.1.1'
     testImplementation 'junit:junit:4.12'
+
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation files('libs/YouTubeAndroidPlayerApi-1.2.2.zip')
@@ -43,6 +44,10 @@ dependencies {
     implementation 'org.tensorflow:tensorflow-lite:+'
     implementation 'com.google.firebase:firebase-core:16.0.2'
     implementation 'com.google.firebase:firebase-auth:16.2.1'
+    implementation 'com.opentok.android:opentok-android-sdk:2.15.3'
+    implementation 'pub.devrel:easypermissions:0.4.0'
+    androidTestImplementation 'com.android.support.test:rules:1.0.2'
+
 }
 
 apply plugin: 'com.google.gms.google-services'
