--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Apr 04 23:43:25 IST 2019
-sdk.dir=C\:\\Users\\DELL\\AppData\\Local\\Android\\Sdk
+#Fri Apr 19 19:31:32 IST 2019
+sdk.dir=C\:\\Users\\Manish\\AppData\\Local\\Android\\Sdk
